--- a/src/abc-123.html
+++ b/src/abc-123.html
@@ -44,10 +44,10 @@
         }
 
         .button {
-            background-color: #0366d6;
+            background-color: #00060c;
             color: white;
             border: none;
-            padding: 8px 16px;
+            padding: 30px 16px;
             border-radius: 6px;
             font-size: 14px;
             cursor: pointer;
@@ -68,6 +68,8 @@
                 This is a simple dummy component with basic styling and layout.
             </div>
             <button class="button">Click Me</button>
+            <button class="button">button 3</button>
+            <button class="button">button 2</button>
         </div>
     </div>
 </body>
